# sparrow-pizza-alpha2

./: .gitattributes  .gitignore  README.md  pyproject.toml
cases/: bribe.txt  burglar.txt  casino_bad.txt  casino_good.txt  casino_neutral.txt  charity.txt  cheat.txt  consent_16.5.txt  consent_28.txt  consent_40.txt  donate.txt  lorry_bad.txt  lorry_good.txt  lorry_neutral.txt  meal.txt  movies.txt  samaritan.txt  seatbelt.txt  speeding_bad.txt  speeding_good.txt  speeding_neutral.txt  wallet.txt
dashboard/: app.py  app_legacy.py
datasets/: all_models.csv  figure1.dta
experiments/: exp0.0.yaml  exp0.1.yaml  exp0.2.yaml  exp0.3.yaml  exp0.4.yaml  exp1.0.yaml  exp1.1.yaml  exp1.2.yaml  exp1.3.yaml  exp1.4.yaml  exp1.5.1.yaml  exp1.5.2.yaml  exp1.5.3.yaml  exp1.5.yaml  exp1.6.0.yaml  exp1.6.5.yaml  exp1.7.0.yaml
scripts/: beta3_comparison.py  process_runs.py  run_async.py  submit_batch  threshold_deltas.py
src/law_norms_llms/: __init__.py  async_runner.py  batch.py  batch_runner.py  config.py  dashboard_data.py  expansion.py  human_regression.py  llm_regression.py  process_results.py  (+4 more)
templates/: system.txt  system_persona_judge.txt  system_persona_lawyer.txt  system_persona_layperson.txt  system_roleplay.txt  system_roleplay_money.txt  system_roleplay_money_old.txt  system_roleplay_money_woman.txt  system_roleplay_money_young.txt
tests/: test_async_runner.py  test_batch_runner.py  test_config.py  test_dashboard_app.py  test_dashboard_data.py  test_expansion.py  test_human_regression.py  test_llm_regression.py  test_process_results.py  test_templating.py
